<resources>
    <string name="app_name">Browsr</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview:</string>
    <string name="tagLine">Tagline:</string>
    <string name="status">Status</string>
    <string name="releaseDate">Release Date</string>
    <string name="voteAverage">Vote Average</string>
    <string name="title_activity_movie">Movie</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_show">TV Show</string>
    <string name="Movie_Detail">Movie Details</string>
</resources>
