<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie_details"
            type="com.zenjob.android.browsr.data.MovieDetails" />

        <variable
            name="pmvm"
            type="com.zenjob.android.browsr.helpers.DataBindingUtils" />

    </data>


    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MovieDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backdrop_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:minHeight="260dp"
                android:scaleType="fitXY"
                app:imageUrl="@{movie_details.backdrop_path}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/poster_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:scaleType="fitXY"

                app:imageUrl="@{movie_details.poster_path}"
                app:layout_constraintBottom_toTopOf="@id/overview"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:minLines="2"
                android:text="@{movie_details.title}"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/poster_path"
                app:layout_constraintTop_toTopOf="@id/poster_path" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:paddingTop="12dp"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/backdrop_path" />

            <TextView
                android:id="@+id/overview_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minLines="5"
                android:text="@{movie_details.overview}"

                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/overview"
                tools:text="overview Details" />

            <TextView
                android:id="@+id/tagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/tagLine"
                android:textColor="@android:color/black"
                android:textSize="20sp"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/overview_detail" />

            <TextView
                android:id="@+id/tagLineDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{movie_details.tagline}"
                android:textColor="@android:color/black"

                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/tagLine"
                tools:text="tagLine Details" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/tagLineDetails" />

            <TextView
                android:id="@+id/statusDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{movie_details.status}"

                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/status"
                tools:text="status" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/releaseDate"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/statusDetails" />

            <TextView
                android:id="@+id/releaseDateDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{movie_details.release_date}"

                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/releaseDate"
                tools:text="release date" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/voteAverage"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/releaseDateDetails" />

            <TextView
                android:id="@+id/vote_average_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:text="@{Double.toString(movie_details.vote_average)}"

                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="@id/poster_path"
                app:layout_constraintTop_toBottomOf="@id/vote_average"
                tools:text="7.1" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>